--- a/partials/login.tpl.html
+++ b/partials/login.tpl.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Login</h3>
+            <h3>登陆页面</h3>
+			<p>只有guest角色(未登录用户)才能访问</p>
         </div>
     </div>
     <form>
