--- a/partials/logout.tpl.html
+++ b/partials/logout.tpl.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>LogOut</h3>
+            <h3>退出登录页面</h3>
+			<p>只有登陆用户(employee, manager)才能访问</p>
         </div>
     </div>
 </div>
