--- a/partials/personal.tpl.html
+++ b/partials/personal.tpl.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Personal</h3>
+            <h3>个人中心页面</h3>
+			<p>只有employee和manager角色才能访问</p>
         </div>
     </div>
 </div>
