--- a/partials/employee.tpl.html
+++ b/partials/employee.tpl.html
@@ -2,7 +2,8 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
-            <h3>Employee</h3>
+            <h3>员工列表页面</h3>
+			<p>只有manager角色才能查看</p>
         </div>
     </div>
 </div>
